--- a/src/components/Skillcard/styled.scss
+++ b/src/components/Skillcard/styled.scss
@@ -10,6 +10,7 @@
     z-index: 9;
   }
   &-view {
+    animation: modalSkill 0.5s ease-in-out;
     display: flex;
     flex-direction: column;
     background-color: #2e2e2e;
@@ -17,6 +18,17 @@
     width: 50%;
     height: fit-content;
     max-height: 90%;
+    margin-top: 50px;
+    label {
+      color: #7c7c7c;
+      align-self: flex-start;
+      margin: 5px;
+      padding: 0px 20px;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
   }
   &-title {
     display: flex;
@@ -44,7 +56,7 @@
     overflow-x: auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 30px;
+    gap: 25px;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
@@ -53,11 +65,15 @@
   }
   &-card {
     transition: 0.2s all ease-in-out;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 80px;
+    padding: 5px 15px;
     color: white;
     font-weight: 600;
     cursor: default;
@@ -66,14 +82,18 @@
       rgba(1, 167, 194, 1) 0%,
       rgba(59, 156, 208, 1) 100%
     );
-    svg {
-      margin-right: 10px;
-      margin-left: 10px;
-    }
     p {
       display: flex;
+      margin-left: 5px;
       align-items: center;
+    }
+    img {
+      width: 30px;
+      height: 30px;
       margin-right: 10px;
+      border-radius: 50%;
+      padding: 2px;
+      background-color: white;
     }
     h1 {
       color: #ffffff;
@@ -81,6 +101,14 @@
     &:hover {
       transform: translateY(-4px);
       transition: 0.2s all ease-in-out;
+    }
+  }
+  &-percent {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    svg {
+      margin: 0px 8px;
     }
   }
   &-button {
@@ -106,6 +134,7 @@
       }
     }
     label {
+      color: white;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -114,5 +143,14 @@
     svg {
       margin-right: 10px;
     }
+  }
+}
+
+@keyframes modalSkill {
+  0% {
+    transform: translateY(100vh);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
