--- a/src/components/navbar/styled.scss
+++ b/src/components/navbar/styled.scss
@@ -11,6 +11,7 @@
   border-radius: 0px 0px 100px 100px;
   padding: 8px 20px;
   background-color: none;
+  box-shadow: 0px 0px 6px -3px rgba(0, 0, 0, 0.1);
 }
 .navbar-button {
   display: none;
@@ -52,6 +53,13 @@
     border-radius: 20px;
     cursor: pointer;
   }
+}
+.navbar-item-active {
+  @extend .navbar-item;
+  background-color: #3d3d3d;
+  color: #ffffff;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 @media (max-width: 800px) {
