--- a/src/components/Skillcard/styled.scss
+++ b/src/components/Skillcard/styled.scss
@@ -6,8 +6,12 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: rgba(0, 0, 0, 0.479);
-    z-index: 9;
+    z-index: 2;
   }
   &-view {
     animation: modalSkill 0.5s ease-in-out;
@@ -92,7 +96,7 @@
       height: auto;
       margin-right: 10px;
       border-radius: 50%;
-      padding: 5px;
+      padding: 3px;
       background-color: white;
     }
     svg {
