--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 .main-app {
   display: flex;
   min-height: 100vh;
+  justify-content: center;
+  align-items: center;
   height: auto;
   flex-direction: column;
   width: 100%;
