--- a/src/components/information/styled.scss
+++ b/src/components/information/styled.scss
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  width: 50%;
+  width: 60%;
   color: #2e2e2e;
   h1 {
     margin: 0;
@@ -76,6 +76,44 @@
     color: #ffffff;
     border-radius: 10px;
     cursor: pointer;
+  }
+}
+@media (max-width: 800px) {
+  .main-info {
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+  }
+  .profile-image {
+    width: 100%;
+    margin: 0px;
+    img {
+      width: 60%;
+    }
+  }
+  .profile-content {
+    width: 80%;
+  }
+  .profile-abstract {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .main-info {
+    margin-top: 80px;
+  }
+  .profile-network {
+    width: 100%;
+    flex-direction: column;
+  }
+  .network-group {
+    background-color: #2e2e2e;
+    justify-content: center;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 8px;
   }
 }
 
