--- a/src/components/navbar/styled.scss
+++ b/src/components/navbar/styled.scss
@@ -1,5 +1,5 @@
 .navbar-main {
-  position: sticky;
+  position: absolute;
   top: 0;
   z-index: 15;
   display: flex;
@@ -58,19 +58,25 @@
   @extend .navbar-item;
   background-color: #3d3d3d;
   color: #ffffff;
-  border-radius: 20px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
-@media (max-width: 800px) {
-  .navbar-button {
-    display: flex;
-  }
+@media (max-width: 500px) {
   .navbar-main {
-    align-self: flex-end;
-    background-color: transparent;
+    justify-content: space-evenly;
+    width: 100%;
+    background-color: #2e2e2e;
+    border-radius: 0px;
   }
   .navbar-item {
-    display: none;
+    padding: 5px;
+    color: white;
+    margin: 4px;
+    &:hover {
+      border-radius: 5px;
+      background-color: #d4d3d3;
+      color: #2e2e2e;
+    }
   }
 }
