--- a/src/components/contactCard/styled.scss
+++ b/src/components/contactCard/styled.scss
@@ -13,7 +13,7 @@
   &-card {
     display: flex;
     background-color: #3b3b3b;
-    width: 40%;
+    width: 70%;
     height: auto;
     color: white;
     padding: 10px;
@@ -84,12 +84,19 @@
     }
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
+  .contact-card {
+    flex-direction: column;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+  }
   .contact-card-item {
     width: 100%;
   }
   .contact-header {
     padding: 15px;
+    width: 100%;
     svg {
       display: none;
     }
