--- a/src/components/Skillcard/styled.scss
+++ b/src/components/Skillcard/styled.scss
@@ -1,27 +1,19 @@
 .skill {
   &-card-main {
-    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.479);
-    z-index: 2;
   }
   &-view {
     animation: modalSkill 0.5s ease-in-out;
     display: flex;
     flex-direction: column;
-    background-color: #2e2e2e;
-    border-radius: 10px;
-    width: 50%;
-    height: fit-content;
-    max-height: 90%;
+    background-color: #333533;
+    padding: 8px;
+    border-radius: 12px;
+    width: 100%;
     margin-top: 50px;
     label {
       color: #7c7c7c;
@@ -39,13 +31,12 @@
     align-items: center;
     justify-content: space-between;
     align-self: flex-start;
-    background-color: #f8f8f8ee;
     padding: 15px;
     width: 95%;
-    border-radius: 0px 20px 20px 0px;
     h1 {
       margin: 0px;
-      color: #1d1d1d;
+      color: #cfdbd5;
+      font-size: 6vw;
     }
     svg {
       color: #2e2e2e;
@@ -68,13 +59,13 @@
     width: 100%;
   }
   &-card {
-    transition: 0.2s all ease-in-out;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
     justify-content: space-evenly;
     align-items: center;
+    border-radius: 12px;
     width: 100%;
     height: 80px;
     padding: 5px 15px;
@@ -101,7 +92,7 @@
     }
     svg {
       margin-left: 8px;
-      color: #ffc404;
+      color: #f5cb5c;
     }
     h1 {
       color: #ffffff;
@@ -152,24 +143,5 @@
     svg {
       margin-right: 10px;
     }
-  }
-}
-@media (max-width: 800px) {
-  .skill-view {
-    width: 90%;
-  }
-  .skill-title {
-    svg {
-      display: none;
-    }
-  }
-}
-
-@keyframes modalSkill {
-  0% {
-    transform: translateY(100vh);
-  }
-  100% {
-    transform: translateY(0px);
   }
 }
