--- a/src/components/information/styled.scss
+++ b/src/components/information/styled.scss
@@ -1,119 +1,151 @@
 .main-info {
   display: flex;
-  width: 100%;
-  padding: 50px;
+  flex-direction: column;
+  width: 95%;
+  padding: 5vw;
+  margin-bottom: 1rem;
+  margin-top: 20px;
+  background-color: #242423;
+  border-radius: 12px;
 }
 .profile-image {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  width: 100%;
   height: auto;
   img {
     animation: img-fly infinite ease-in-out 5s;
     margin-left: 10px;
-    width: 90%;
-    height: auto;
-    border-radius: 10%;
-  }
-}
-
-.profile-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  width: 60%;
-  color: #2e2e2e;
-  h1 {
-    margin: 0;
-  }
-  p {
-    margin: 15px 0px;
-  }
-}
-.profile-abstract {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #3b3b3b;
-  outline: none;
-  width: 60%;
-  height: auto;
-  padding: 20px;
-  background-color: #3b3b3b;
-  background-image: linear-gradient(135deg, #3b3b3b 0%, #292929 100%);
-  border-radius: 10px;
-  color: #dfdfdf;
-  transition: 0.2s ease-in-out;
-  outline: none;
-  p {
-    margin: 0;
-  }
-  &:hover {
-    transition: 0.2s ease-in-out;
-    border: 1px solid #01a7c2;
-  }
-}
-.profile-network {
-  display: flex;
-  padding: 15px;
-  p {
-    margin: 0px 10px;
-  }
-}
-.network-group {
-  display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
-  margin: 5px 10px;
-  padding: 5px 10px;
-  color: #2e2e2e;
-  &:hover {
-    transition: all ease-in-out 0.1s;
-    background-color: #3d3d3d;
-    color: #ffffff;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-}
-@media (max-width: 800px) {
-  .main-info {
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-  }
-  .profile-image {
     width: 100%;
-    margin: 0px;
+    height: auto;
+    border-radius: 12px;
+  }
+}
+.info {
+  &-container {
+    position: relative;
+    text-align: center;
+
     img {
-      width: 60%;
+      width: 40%;
+      height: auto;
     }
   }
-  .profile-content {
-    width: 80%;
+  &-title {
+    border-radius: 12px;
+    padding: 8px;
+    width: fit-content;
+    height: fit-content;
+    font-size: 4vw;
+    font-weight: 900;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    h1 {
+      color: #cfdbd5;
+    }
   }
-  .profile-abstract {
-    width: 100%;
+  &-text-1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333533;
+    font-weight: 500;
+    color: #e8eddf;
+    margin-top: 2rem;
+    padding: 2.5vw;
+    border-radius: 14px;
+    img {
+      width: 20%;
+      border-radius: 6px;
+      padding: 12px;
+      background-color: #01a44f;
+      background-image: linear-gradient(
+        225deg,
+        #01a44f 0%,
+        #139eca 50%,
+        #2b86c5 100%
+      );
+    }
+    p {
+      padding: 4px;
+      font-size: 1.8vw;
+      width: 50vw;
+    }
+  }
+  &-text-2 {
+    @extend .info-text-1;
+    flex-direction: row-reverse;
+    img {
+      width: 40%;
+      padding: 0px;
+      background-color: unset;
+    }
+    p {
+      width: 40vw;
+    }
+  }
+  &-text-3 {
+    @extend .info-text-1;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    flex-wrap: wrap;
+    gap: 1rem;
+    @media (max-width: 900px) {
+      & {
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-content: center;
+        p {
+          font-size: 3vw;
+        }
+      }
+    }
+    .info-about {
+      display: flex;
+      flex-direction: column;
+      padding: 12px;
+      border-radius: 4px;
+      border: 1px solid #e8eddf;
+      h1 {
+        color: #e8eddf;
+        margin-bottom: 4px;
+      }
+    }
+  }
+  &-final {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    text-align: center;
+    h1 {
+      color: #e8eddf;
+      font-size: 1.2rem;
+    }
+  }
+  &-button {
+    margin-top: 1rem;
+    background-color: #e8eddf;
+    width: fit-content;
+    padding: 30px;
+    border-radius: 30px;
+    &:hover {
+      cursor: pointer;
+      transition: 0.2s;
+      opacity: 0.6;
+    }
   }
 }
 
-@media (max-width: 400px) {
-  .main-info {
-    margin-top: 80px;
-  }
-  .profile-network {
-    width: 100%;
-    flex-direction: column;
-  }
-  .network-group {
-    background-color: #2e2e2e;
-    justify-content: center;
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 8px;
+@media (max-width: 800px) {
+  .info-text-1 {
+    p {
+      font-size: 2.3vw;
+    }
   }
 }
 
